[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Dong.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Game" type="Node"]
script = ExtResource( 4 )
Dong = ExtResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="DongTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="GameTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="DongPath" type="Path2D" parent="."]
curve = SubResource( 1 )
__meta__ = {
"_editor_description_": "This path represents the boundries of the viewport upon which the PathFollow2D node can \"follow\" on."
}

[node name="DongSpawnLocation" type="PathFollow2D" parent="DongPath"]

[node name="UI" parent="." instance=ExtResource( 3 )]
layer = -1

[node name="Player" parent="." instance=ExtResource( 2 )]
speed = 500

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )
[connection signal="timeout" from="Timers/DongTimer" to="." method="_on_DongTimer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="Timers/GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="UI" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
